--- a/index.html
+++ b/index.html
@@ -48,18 +48,21 @@
                 <div class="text-center">
                     <h1>Blink 182</h1>
                 </div>
+                <div class="parrafo text-center">
+                    <p>Sitio dedicado a los fans de la banda, conoce sus vidas y escucha su música...</p>
+                </div>
                 <div class="row row-cols-1 row-cols-md-3 h-4 pb-4">
                     <div data-aos="zoom-in" data-aos-duration="1500" class="col">
                         <div class="card shadow mb-3">
                             <div class="img-holder">
-                                <img class="card-img-top galeria" src="./assets/imagenes/mark-hoppus.jpg" alt="Mark Hoppus">
+                                <img class="card-img-top" src="./assets/imagenes/mark-hoppus.jpg" alt="Mark Hoppus">
                             </div>
                             <div class="card-body text-center">
                                 <h2 class="card-title"> Mark Hoppus </h2>
                                 <p>Bajista/Cantante</p>
                             </div>
                             <div class="text-center mb-3">
-                                <a class="btn btn-dark" href="https://es.wikipedia.org/wiki/Mark_Hoppus" target="_blank" rel="noopener noreferrer" role="button">Saber Mas</a>
+                                <a class="btn btn-dark" href="https://es.wikipedia.org/wiki/Mark_Hoppus" target="_blank" rel="noopener noreferrer" role="button">Saber Más</a>
                             </div>
                         </div>
                     </div>
@@ -67,14 +70,14 @@
                     <div data-aos="zoom-in" data-aos-duration="1500" class="col">
                         <div class="card shadow mb-3">
                             <div class="img-holder">
-                                <img class="card-img-top galeria" src="./assets/imagenes/tom-delonge.jpg" alt="Tom DeLonge">
+                                <img class="card-img-top" src="./assets/imagenes/tom-delonge.jpg" alt="Tom DeLonge">
                             </div>
                             <div class="card-body text-center">
                                 <h2 class="card-title"> Tom DeLonge </h2>
                                 <p>Guitarrista/Cantante</p>
                             </div>
                             <div class="text-center mb-3">
-                                <a class="btn btn-dark" href="https://es.wikipedia.org/wiki/Tom_DeLonge" target="_blank" rel="noopener noreferrer" role="button">Saber Mas</a>
+                                <a class="btn btn-dark" href="https://es.wikipedia.org/wiki/Tom_DeLonge" target="_blank" rel="noopener noreferrer" role="button">Saber Más</a>
                             </div>
                         </div>
                     </div>
@@ -82,14 +85,14 @@
                     <div data-aos="zoom-in" data-aos-duration="1500" class="col">
                         <div class="card shadow mb-3">
                             <div class="img-holder">
-                                <img class="card-img-top galeria" src="./assets/imagenes/travis-barker.jpeg" alt="Travis Barker">
+                                <img class="card-img-top" src="./assets/imagenes/travis-barker.jpeg" alt="Travis Barker">
                             </div>
                             <div class="card-body text-center">
                                 <h2 class="card-title"> Travis Barker </h2>
                                 <p>Baterista</p>
                             </div>
                             <div class="text-center mb-3">
-                                <a class="btn btn-dark" href="https://es.wikipedia.org/wiki/Travis_Barker" target="_blank" rel="noopener noreferrer" role="button">Saber Mas</a>
+                                <a class="btn btn-dark" href="https://es.wikipedia.org/wiki/Travis_Barker" target="_blank" rel="noopener noreferrer" role="button">Saber Más</a>
                             </div>
                         </div>
                     </div>
