--- a/pages/info.html
+++ b/pages/info.html
@@ -54,6 +54,10 @@
                     y Scott Raynor (quien en 1998 sería sustituido por Travis Barker) en Poway, California. Son considerados los pioneros
                     del pop punk y una de las bandas que contribuyó a su éxito masivo internacional a finales de los 1990 y principios de
                     los 2000.</p>
+
+                    <div class="img-holder text-center mb-3">
+                        <img src="../assets/imagenes/bio1.jpg" alt="Primer concierto de Blink 182">
+                    </div>
                 
                     <p data-aos="fade-left" data-aos-duration="1500">Poco tiempo después de lanzar su primer álbum de estudio en 1995, Cheshire Cat, sería su primer disco oficial ya que
                     antes habían grabado 3 demos, entre ellos Buddha, el cual incluiría uno de sus más grandes éxitos Carousel, la entonces
@@ -69,6 +73,10 @@
                     su separación, lanzaron lo que fue en ese momento su último álbum de estudio, que no fue titulado. Apenas dos años
                     después, en 2005, la banda hizo oficial su separación y surgieron, a su vez, dos grupos de esta ruptura: Angels and
                     Airwaves liderado por DeLonge, y +44 con Hoppus y Barker.</p>
+
+                    <div class="img-holder text-center mb-3">
+                        <img src="../assets/imagenes/bio2.jpg" alt="Tom, Mark y Travis a mediados de los 2000">
+                    </div>
                 
                     <p data-aos="fade-right" data-aos-duration="1500">La banda es conocida por su humor satírico y escatológico (conocido en inglés como toilet humor). El lanzamiento de su
                     primer álbum en 1995, Cheshire Cat, coincidió con el éxito del resurgimiento punk rock californiano y del lanzamiento en
@@ -78,7 +86,7 @@
                     y un sonido musical más maduro, como se demostró en uno de los proyectos paralelos de DeLonge y Barker, Box Car Racer.</p>
                 </div>
                 <div class="text-center mb-3">
-                    <a class="btn btn-dark" href="https://es.wikipedia.org/wiki/Blink-182" target="_blank" rel="noopener noreferrer" role="button">Saber Mas</a>
+                    <a class="btn btn-dark" href="https://es.wikipedia.org/wiki/Blink-182" target="_blank" rel="noopener noreferrer" role="button">Saber Más</a>
                 </div>
             </div>        
         </main>
