--- a/pages/tour.html
+++ b/pages/tour.html
@@ -49,7 +49,7 @@
                     <h1>Latam Tour</h1>
                 </div>
                 <div class="parrafo text-center">
-                    <p>Estos son nuestros proximos conciertos...</p>
+                    <p>Estos son nuestros próximos conciertos...</p>
                 </div>
                 <div class="row row-cols-3 row-cols-md-3 h-4 pb-4 mx-auto text-center">
                     <div data-aos="fade-left" data-aos-duration="1500" class="col">
